--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,20 @@ body {
   font-family: 'Raleway', sans-serif;
   font-size: 1.6rem;
 }
+
+/* Navigation */
+
+nav {
+  font-size: 2rem;
+  text-transform: uppercase;
+}
+
+.navbar-toggler {
+  font-size: 3rem;
+}
+
+.navbar-brand {
+  font-size: 2.4rem;
+  font-weight: bold;
+  text-transform: none;
+}
