--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,36 @@ header {
   background-image: url('../img/main-carousel-3.jpg');
 }
 
+/* Home */
+
+.home-boxes {
+  padding: 5em 0;
+}
+
+.home-box i {
+  font-size: 4rem;
+}
+
+.home-box h3 {
+  font-size: 2.6rem;
+}
+
+.home-passion {
+  position: relative;
+  height: 350px;
+  background-image: url(../img/sunset-vw.jpg);
+  background-position: center;
+  background-size: cover;
+  z-index: 0;
+}
+
+.home-brand h3 {
+  font-size: 3rem;
+  font-weight: bold;
+}
+
+/* Media Queries */
+
 @media (min-width: 1400px) {
   .carousel-item {
     height: 600px;
