--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,74 @@ footer {
   background-position: bottom;
 }
 
+.aboutus-info {
+  background-color: rgb(248, 248, 248);
+}
+
+.aboutus-info .container {
+  padding: 2em 0.5em;
+}
+
+.aboutus-text {
+  padding: 1.8em;
+}
+
+.aboutus-text h3 {
+  margin-bottom: 0.5em;
+  font-size: 2.6rem;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-decoration: underline #007bff;
+}
+
+.aboutus-text-right {
+  text-align: right;
+}
+
+.aboutus-img {
+  height: 300px;
+  object-fit: cover;
+}
+
+.aboutus-bottom i {
+  font-size: 3rem;
+}
+
+.aboutus-bottom h3 {
+  font-size: 2.2rem;
+  font-weight: bold;
+}
 /* Media Queries */
+
+@media (min-width: 992px) {
+  .aboutus-info .container {
+    padding: 0;
+  }
+
+  .aboutus-shadow {
+    box-shadow: inset 0 5px 10px -5px rgba(0, 0, 0, 0.4);
+  }
+
+  .aboutus-text {
+    padding: 5em 0;
+    transform: skew(-15deg);
+  }
+
+  .aboutus-text-left {
+    padding-right: 2em;
+    text-align: right;
+  }
+
+  .aboutus-text-right {
+    text-align: left;
+    padding-left: 2em;
+  }
+
+  .aboutus-img {
+    height: auto;
+    transform: skew(-15deg);
+  }
+}
 
 @media (min-width: 1400px) {
   .carousel-item {
