prepare services page

--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,14 @@ footer {
   font-size: 2.2rem;
   font-weight: bold;
 }
+
+/* Services */
+
+.services-hero {
+  background-image: url(../img/services/services.jpg);
+  background-position: 0 75%;
+}
+
 /* Media Queries */
 
 @media (min-width: 992px) {
