--- a/css/style.css
+++ b/css/style.css
@@ -226,6 +226,23 @@ footer {
   }
 }
 
+/* Projects */
+
+.projects-hero {
+  background-image: url(../img/projects/project-hero.jpg);
+  background-position: center;
+}
+
+.projects img {
+  height: 240px;
+  object-fit: cover;
+}
+
+.projects .btn {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+}
+
 @media (min-width: 1400px) {
   .carousel-item {
     height: 600px;
